# qfin

./: CHANGELOG.md  Cargo.toml  LICENSE
crates/qfin/: Cargo.toml  LICENSE
crates/qfin-api/: Cargo.toml  README.md
crates/qfin-api/src/: de.rs  deserializer.rs  error.rs  lib.rs
crates/qfin-api/src/oanda/: candle.rs  client.rs  instrument.rs  mod.rs  request.rs  response.rs
crates/qfin-api/src/oanda/client/: instruments.rs  mod.rs
crates/qfin-api/src/oanda/entity/: candle.rs  candlestick.rs  instrument.rs  mod.rs
crates/qfin-data/: Cargo.toml
crates/qfin-data/src/: datapoint.rs  dataset.rs  lib.rs
crates/qfin-data/src/dataset/: dsl.rs  mod.rs
crates/qfin-error/: Cargo.toml
crates/qfin-error/src/: lib.rs
crates/qfin-fundamental/: Cargo.toml
crates/qfin-math/: Cargo.toml
crates/qfin-ml/: Cargo.toml
crates/qfin-technical/: Cargo.toml
crates/qfin-technical/src/: lib.rs
crates/qfin-technical/src/indicator/: average_true_range.rs  chandelier_exit.rs  mod.rs  tether_line.rs
crates/qfin-time/: Cargo.toml
crates/qfin/src/: lib.rs
