[package]
name = "qfin"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
